# puremessage

./: .gitmodules
cpp/: .gitignore  CMakeLists.txt
cpp/include/: API.h  AbstractServer.h  PureMessage.hpp  Server.h  ServerSync.h  Utils.h
cpp/test/: Parameter.cpp  main.cpp
js/: index.js  package-lock.json  package.json
js/src/clients/: index.js
